updated triple pattern translation tests